--- a/white.css
+++ b/white.css
@@ -57,3 +57,9 @@ input[type="color"]::-webkit-color-swatch{
     border-radius: 8px;
     border: 3px solid black ;
 }
+input[type="color"]::moz-color-swatch{
+    border-radius: 8px;
+    border: 3px solid black ;
+
+
+}
