--- a/white.css
+++ b/white.css
@@ -3,6 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+* {
+    transition: all 0.2s ease;
+}
+
+#paint {
+    width: 100%;
+    height: 100%;
+    display: block; 
+}
+
 #paintarea{
     position: relative;
     border: 8px solid #788eff;
@@ -32,14 +42,23 @@
 
 
 }
-.tool-row button{
-    padding: 12px 0px;
-    border-radius:25px ;
-    font-size: 18px;
+.tool-row button {
+    padding: 12px 20px;
+    border-radius: 25px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    background: white;
     color: #788eff;
     cursor: pointer;
-
+    transition: all 0.3s ease;
 }
+
+.tool-row button:hover {
+    background: #5f72d6;
+    color: white;
+}
+
 input[type="range"]{
     height: 40px;
 
@@ -57,9 +76,7 @@ input[type="color"]::-webkit-color-swatch{
     border-radius: 8px;
     border: 3px solid black ;
 }
-input[type="color"]::moz-color-swatch{
+input[type="color"]::-moz-color-swatch {
     border-radius: 8px;
-    border: 3px solid black ;
-
-
+    border: 3px solid black;
 }
