--- a/white.css
+++ b/white.css
@@ -28,7 +28,7 @@
 }
 .tool-row{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     margin-bottom: 40px;
 
@@ -43,7 +43,9 @@
 
 }
 .tool-row button {
-    padding: 12px 20px;
+     width: 200px;   
+    height: 45px;   
+    padding: 0;
     border-radius: 25px;
     font-size: 16px;
     font-weight: 600;
@@ -51,6 +53,7 @@
     background: white;
     color: #788eff;
     cursor: pointer;
+       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     transition: all 0.3s ease;
 }
 
