--- a/white.css
+++ b/white.css
@@ -22,7 +22,6 @@ body {
     border: 8px solid #1a1a40;
     height: 70vh;
     width:100%;
-    
 
 }
 .options{
@@ -105,20 +104,10 @@ input[type="color"]::-moz-color-swatch {
     color: #333;
     transition: all 0.3s ease;
 }
-  .darkmode #paintarea {
-    background: #121212;
-    border-color: #ffffff;
-  }
+#toggle-darkmode{
+    border-radius: 15px;
+    height: 50px;
+    width: 110px;
 
-  .darkmode #paint {
-    background: #222; 
-  }
-
-  #toggle-darkmode {
-    margin-bottom: 10px;
-    padding: 6px 12px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;}
-    
+}
 
