--- a/white.css
+++ b/white.css
@@ -37,6 +37,7 @@ body {
     margin-bottom: 40px;
 
 }
+/* row function */
 .tool-row h5{
     margin-bottom: 10px;
     color: white;
@@ -65,7 +66,7 @@ body.dark {
        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     transition: all 0.3s ease;
 }
-
+/* hover button section */
 .tool-row button:hover {
     background: #5f72d6;
     color: white;
