--- a/white.css
+++ b/white.css
@@ -45,7 +45,7 @@ body {
     font-size: 19px;
     letter-spacing: 0.6px;
 }
-body.dark {
+canvas.dark {
     background: #121212;
     color: #e0e0e0;
 }
