--- a/white.css
+++ b/white.css
@@ -162,3 +162,22 @@ input[type="color"]::-moz-color-swatch {
     font-size: 14px;
     padding: 8px;
   }
+  
+  input[type="range"] {
+    width: 100%;
+    height: 30px;
+  }
+
+  input[type="color"] {
+    width: 60px;
+    height: 35px;
+  }
+
+  
+  #toggle-darkmode {
+    top: 10px;
+    right: 10px;
+    padding: 8px 15px;
+    font-size: 14px;
+  }
+}
