--- a/white.css
+++ b/white.css
@@ -16,6 +16,7 @@ body {
     height: 100%;
     display: block; 
 }
+/* paint area */
 
 #paintarea{
     position: relative;
@@ -24,12 +25,14 @@ body {
     width:100%;
 
 }
+/* option button */
 .options{
     height:30vh ;
     background-color: #1a1a40;
     padding: 30px;
 
 }
+/* tools are  */
 .tool-row{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
